_k8s/deployment-cron.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: clouddrove-cron
  namespace: clouddrove
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clouddrove-cron

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: clouddrove-cron
    spec:
      containers:
      - name: cron
        image: <changeme>
        imagePullPolicy: Always
      imagePullSecrets:
      - name: docker-auth
