_k8s/deployment-mysql.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: clouddrove
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image:  mysql:8.0.14
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        livenessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 3306
          initialDelaySeconds: 30
          periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: clouddrove
spec:
  ports:
  - port: 3306
  selector:
    name: mysql
