_k8s/deployment-api.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  namespace: clouddrove
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: api
    spec:
      # inject hostname to connect nginx with php-fpm backend
      # because dokcer calls it backend while kubernetes requires Pod's localhost
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "backend"

      containers:
      - name: web
        image: registry.gitlab.com/clouddrove/audit-api:1.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10

      imagePullSecrets:
      - name: docker-auth

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
  namespace: clouddrove
spec:
  ports:
  - port: 80
  selector:
    name: api

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: clouddrove
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
  - host: cloud.clouddrove.io
    http:
      paths:
      - path: /
        backend:
          serviceName: api
          servicePort: 80
